Update minor formatting
Update minor formatting

--- a/Bank marketing campaigns analysis.ipynb
+++ b/Bank marketing campaigns analysis.ipynb
@@ -23,7 +23,7 @@
     " - _loan_ : has personal loan? (categorical: \"no\",\"yes\",\"unknown\")\n",
     " - _contact_ : contact communication type (categorical: \"cellular\",\"telephone\")\n",
     " - _month_ : last contact month of year (categorical: \"jan\", \"feb\", \"mar\", ..., \"nov\", \"dec\")\n",
-    " - _day_of_week_ : last contact day of the week (categorical: \"mon\",\"tue\",\"wed\",\"thu\",\"fri\")\n",
+    " - *day_of_week* : last contact day of the week (categorical: \"mon\",\"tue\",\"wed\",\"thu\",\"fri\")\n",
     " - _duration_ : last contact duration, in seconds (numeric). \n",
     " - _campaign_ : number of contacts performed during this campaign and for this client (numeric, includes last contact)\n",
     " - _pdays_ : number of days that passed by after the client was last contacted from a previous campaign (numeric; 999 means client was not previously contacted)\n",
@@ -2681,13 +2681,6 @@
     "- Clients for whom previous campaign outcome was successful, agreed to [65%](#p-poutcome) of the calls. This is significant figure and can be used to target customers in further campaigns.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
